--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "react": "^18.0.1",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.0.1",
     "react-hook-form": "^7.34.2",
     "react-query": "^3.13.0",
