--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
+    "@mui/x-date-pickers": "^6.11.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
+    "moment": "^2.29.4",
     "react": "^18.0.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.0.1",
