--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "@mui/x-date-pickers": "^6.11.0",
+    "@supabase/auth-ui-react": "^0.4.2",
+    "@supabase/supabase-js": "^2.32.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "moment": "^2.29.4",
